[gd_scene load_steps=4 format=3 uid="uid://bx6xeual2f7g7"]

[ext_resource type="Texture2D" uid="uid://qwxci075sntd" path="res://Assets/sprites/FullShell.png" id="1_78m4n"]
[ext_resource type="Script" uid="uid://cl107colad1yx" path="res://Scripts/health_bar.gd" id="1_m34ix"]
[ext_resource type="Texture2D" uid="uid://cpra2sjadp0po" path="res://Assets/sprites/EmptyShell.png" id="3_qay8w"]

[node name="HealthBar" type="Node2D"]
script = ExtResource("1_m34ix")
FullShell = ExtResource("1_78m4n")
EmptyShell = ExtResource("3_qay8w")

[node name="FullShell1" type="Sprite2D" parent="."]
position = Vector2(3.5, 3.5)
texture = ExtResource("1_78m4n")

[node name="FullShell2" type="Sprite2D" parent="."]
position = Vector2(14.5, 3.5)
texture = ExtResource("1_78m4n")

[node name="FullShell3" type="Sprite2D" parent="."]
position = Vector2(25.5, 3.5)
texture = ExtResource("1_78m4n")
